--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,15 @@
-jinjasql==0.1.7
-pandas==0.24.2
-pysftp==0.2.8
-tensorflow==1.13.1
-numpy==1.16.0
 SQLAlchemy==1.3.2
+pandas==0.24.2
+six==1.14.0
+face_recognition==1.2.2
+jinjasql==0.1.7
+Keras==2.3.1
 requests==2.19.1
+pysftp==0.2.8
+scipy==1.4.1
+numpy==1.16.0
+tensorflow==1.13.1
+opencv_python==4.2.0.32
+imageai==2.1.5
 Pillow==7.0.0
+pycocotools==2.0.0
